--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>JUET HELPDESK</title>
+    <link rel="shortcut icon" href="/image.png" type="image/x-icon" />
   </head>
 
   <body>
